--- a/sass/partials/design/_design.sass
+++ b/sass/partials/design/_design.sass
@@ -7,7 +7,7 @@
     +breakpoint(1200px min-width)
       margin: 0 auto
       // 1065 (max width) + 35 (neg margin to left) + 70 (search icon width with padding)
-      max-width: 1070px
+      max-width: 960px
       position: relative
       &> .section
         margin-left: -50px
@@ -30,6 +30,7 @@
   .svg &
     background: image_url("logo.svg") no-repeat 0 20px
     background-size: 100%
+    margin-left: -55px
     padding: 35px 0
     width: 159px
   .no-js &,
